# webreader_security_analysis

.github/workflows/: codeql-analysis.yml
mangaloid-instance-master/: LICENSE  README.md  config.json  meson.build  schema.sql
mangaloid-instance-master/controllers/: MangaCtrl.cc  MangaCtrl.h  MangaCtrlBase.cc  MangaCtrlBase.h
mangaloid-instance-master/filters/: BanFilter.cc  BanFilter.h  TimeFilter.cc  TimeFilter.h
mangaloid-instance-master/include/: Types.h  Util.h
mangaloid-instance-master/models/: Artist.cc  Artist.h  Author.cc  Author.h  Chapter.cc  Chapter.h  Manga.cc  Manga.h  MangaTag.cc  MangaTag.h  Person.cc  Person.h  Tag.cc  Tag.h  Title.cc  Title.h  model.json
mangaloid-instance-master/src/: Main.cc  Util.cc
